--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input id="formName" type="text" name="name" class="form-input req">
                 </div>
                 <div class="form-item">
-                    <label for="formEmail" class="form-label">Email:</label>
+                    <label for="formEmail" class="form-label formlabe">Email:</label>
                     <input id="formEmail" type="text" name="email" class="form-input req email">
                 </div>
                 <div class="form-item">
