--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <div class="file-button">Choose</div>
                         </div>
                         <div id="formPreview" class="file-preview">
+                            <div></div>
                         </div>
                     </div>
                 </div>
